--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,11 +5,11 @@ env:
   APPLICATION_NAME: app2
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Setup Python environment
-      uses: actions/setup-python@v1.1.1
+      uses: actions/setup-python@v5.1.0
     - name: Install requirements
       run: pip install --quiet --requirement requirements.txt
     - name: Lint code
